force-app/main/default/objects/Activity/fields/Interview_Participant__c.field-meta.xml
<CustomField>
    <fullName>Interview_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Participant</label>
    <referenceTo>InterviewParticipant__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>CandidateInterviews</relationshipName>
    <type>Lookup</type>
</CustomField>