force-app/main/default/objects/Activity/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Panel_Member_Role</valueSetName>
    </valueSet>
</CustomField>